kind of fix for weird overlap on mobile

--- a/license.css
+++ b/license.css
@@ -146,6 +146,10 @@ main aside button:hover {
 }
 
 @media only screen and (max-width: 600px) {
+  main {
+    margin-top: 80px;
+  }
+
   main div {
     flex-direction: column;
   }
